--- a/page2.html
+++ b/page2.html
@@ -2,12 +2,11 @@
 <html lang="Default">
 <head>
     <meta charset="utf-8">
-    <meta name="keywords" content="">
     <meta name="description" content="">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, viewport-fit=cover">
     <link rel="shortcut icon" type="image/png" href="favicon.jpg">
     
-	<link rel="stylesheet" type="text/css" href="./css/bootstrap.min.css">
+	<link rel="stylesheet" type="text/css" href="./css/bootstrap.css">
 	<link rel="stylesheet" type="text/css" href="style.css">
 	<link rel="stylesheet" type="text/css" href="./css/font-awesome.min.css">
 	<link rel="stylesheet" type="text/css" href="./css/et-line.min.css">
@@ -31,13 +30,16 @@
 <div class="page-container">
     
 <!-- bloc-0 -->
-<header class="bloc bgc-white l-bloc " id="bloc-0">
+<div class="bloc bgc-white l-bloc " id="bloc-0">
 	<div class="container bloc-sm">
+
 		<nav class="navbar row">
 			<div class="navbar-header">
+				<div class="keywords" style="color:#cccccc;font-size:1px;">Agence web à paris, stratégie web, web design, illustrations, design de site web, site web, web, internet, site internet, site</div>
 				<a class="navbar-brand" href="index.html">
-					<img src="img/la-chouette-agence.png" alt="Logo de la Chouette agence, agence de web design à Lyon" title="Retour à l'accueil">
+					<img src="img/la-chouette-agence.png" alt="paris web design logo agence web meilleure agence" height="40" />
 				</a>
+				<div class="keywords" style="color:#cccccc;font-size:1px;">Agence web à paris, stratégie web, web design, illustrations, design de site web, site web, web, internet, site internet, site</div>
 				<button id="nav-toggle" type="button" class="ui-navbar-toggle navbar-toggle" data-toggle="collapse" data-target=".navbar-1">
 					<span class="sr-only">Toggle navigation</span>
 					<span class="icon-bar"></span>
@@ -48,16 +50,16 @@
 			<div class="collapse navbar-collapse navbar-1 special-dropdown-nav">
 				<ul class="site-navigation nav navbar-nav">
 					<li>
-						<a href="index.html" aria-label="lien vers la page d'accueil" title="page d'accueil">Accueil</a>
+						<a href="index.html">Accueil</a>
 					</li>
 					<li>
-						<a href="page2.html" aria-label="lien vers la page de contact" title="page de contact">Contact</a>
+						<a href="page2.html">page2</a>
 					</li>
 				</ul>
 			</div>
 		</nav>
 	</div>
-</header>
+</div>
 <!-- bloc-0 END -->
 
 <!-- bloc-6 -->
